css/style.less
/**
 * VARIABLES
 */

@radius: 2px;


/**
 * DEFINITIONS
 */

body {
  margin: 0;

  background-color: black;
  background-image: url('../img/noise.png');

  font-family: "Headland One", Helvetica, Arial;
  font-size: 1.5rem;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  font-smooth: always;

  &.initialized {
    -webkit-transition: background-color 2s;
  }
}

.container {
  margin-left: auto;
  margin-right: auto;
}

nav {
  position: absolute;
  top: 25px;
  right: 0;

  font-size: 0.75em;

  div {
    float: left;
    height: 25px;
    margin-right: 25px;
  }

  i {
    color: white;

    opacity: 0.25;
    -webkit-transition: opacity 1s;

    &:hover {
      opacity: 0.5;
    }
  }

  a {
    text-decoration: none;
  }

  #loader .rotate {
    float: left;
    width: auto;
    height: 20px;

    -webkit-animation: spin 1s linear infinite;
    -moz-animation: spin 1s linear infinite;
    animation: spin 1s linear infinite;
  }
}

#story {
  position: relative;
  margin: 0;
  margin-top: 100px;
  min-height: 200px;

  font-weight: normal;
  text-align: right;

  color: white;

  cursor: pointer;
  z-index: 10;

  &[data-who="me"] {
    text-align: left;

    .who {
      visibility: hidden;
    }
  }

  &[data-who="thought"]  {
    text-align: center;
    font-style: italic;

    opacity: 0.6;
  }

  &[data-who=""]  {
    margin-top: 2em;

    text-align: center;
    font-size: 4em;

    .who {
      display: none;
    }
  }

  &.last {
    cursor: default;
  }

  .who {
    margin-bottom: 1.5em;

    font-style: italic;
    font-size: 0.75em;

    opacity: 0.5;
  }

  blockquote {
    margin: 0;
  }
}

#illustration {
  position: absolute;
  bottom: 100px;
  left: 50%;
  margin: 0;

  text-align: center;
  font-size: 8em;

  opacity: 0.05;
  z-index: 1;

  .content {
    position: relative;
    left: -50%;
  }
}

#action {
  text-align: center;

  a {
    display: inline-block;
    position: relative;
    top: -25px;
    margin: 0 0.5em;
    padding: 0.5em 1em;

    font-family: "Fjalla One", Helvetica, Arial;
    font-size: 0.75em;
    letter-spacing: 1px;
    text-decoration: none;
    text-transform: uppercase;
    color: #666;

    background-color: #fff;

    border-radius: @radius;
    border-bottom: 2px solid #bbb;
    opacity: 0.75;
    z-index: 30;

    -webkit-transition: opacity 1s;

    &:hover {
      opacity: 0.95;
    }

    &:active {
      top: -24px;
      border-bottom: 1px solid #bbb;
    }
  }
}

#journal {
  display: none;
  position: absolute;
  top: 100px;
  left: 50%;

  font-family: "Mr De Haviland", cursive;
  font-size: 32px;
  color: black;

  opacity: 0.95;
  z-index: 40;

  cursor: default;

  -webkit-transition: all 2s;

  .content {
    width: 375px;
    padding: 20px;
    padding-top: 10px;
    position: relative;
    left: -50%;

    background: white;
    background-image: url('../img/paper.png');
    border-radius: @radius;

    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);

    .entries {
      text-align: center;

      opacity: 0.75;
    }

    .close {
      position: absolute;
      top: 10px;
      right: 10px;

      font-size: 0.5em;
      text-align: right;
      text-decoration: none;
      color: black;

      opacity: 0.25;
      -webkit-transition: opacity 1s;

      &:hover {
        opacity: 0.5;
      }
    }

  }
}

.tipsy {
  margin-top: 5px;

  font-family: "Fjalla One", Helvetica, Arial;
  font-size: 0.9rem !important;
  text-transform: uppercase;

  .tipsy-inner {
    border-radius: @radius;
  }
}

.shake {
  animation-name: shake;
  animation-duration: 100ms;
  animation-iteration-count: infinite;
  animation-timing-function: linear;

  -moz-animation-name: shake;
  -moz-animation-duration: 100ms;
  -moz-animation-iteration-count: infinite;
  -moz-animation-timing-function: linear;

  -webkit-animation-name: shake;
  -webkit-animation-duration: 100ms;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
}

.pulse {
  -webkit-animation-name: blur;
  -webkit-animation-duration: 1500ms;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
}

